--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
       }
     ],
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=5.6",
+        "vlucas/phpdotenv": "^2.0.1",
         "illuminate/support": "5.1.*",
         "illuminate/container": "5.1.*",
         "illuminate/config": "5.1.*",
