--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/var-dumper": "^3.1",
         "october/router": "^1.0",
         "filp/whoops": "^2.1",
-        "symfony/console": "^3.3"
+        "symfony/console": "^3.3",
+        "symfony/yaml": "^3.3"
     },
     "autoload": {
         "psr-4": {
