--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     ],
     "require": {
         "php": ">=5.6",
+        "doctrine/inflector": "1.1.*",
         "vlucas/phpdotenv": "^2.0.1",
         "illuminate/support": "5.1.*",
         "illuminate/container": "5.1.*",
