composer.json edited online with Bitbucket

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "illuminate/config": "5.1.*",
         "illuminate/http": "5.1.*",
         "symfony/var-dumper": "^3.1",
-        "october/router": "^1.0",
+        "october/rain": "~1.0.419",
         "filp/whoops": "^2.1",
         "symfony/console": "^3.3",
         "symfony/yaml": "^3.3"
