--- a/composer.json
+++ b/composer.json
@@ -12,18 +12,22 @@
       }
     ],
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.1.3",
+        "composer/installers": "~1.0",
         "doctrine/inflector": "1.1.*",
         "vlucas/phpdotenv": "^2.0.1",
-        "illuminate/support": "5.1.*",
-        "illuminate/container": "5.1.*",
-        "illuminate/config": "5.1.*",
-        "illuminate/http": "5.1.*",
+        "illuminate/support": "5.6.*",
+        "illuminate/container": "5.6.*",
+        "illuminate/view": "5.6.*",
+        "illuminate/config": "5.6.*",
+        "illuminate/http": "5.6.*",
         "symfony/var-dumper": "^3.1",
         "october/rain": "1.0.399",
         "filp/whoops": "^2.1",
         "symfony/console": "^3.3",
-        "symfony/yaml": "^3.0"
+        "symfony/yaml": "^3.0",
+        "roots/sage-lib": "~9.0.9",
+        "soberwp/controller": "~2.1.0"
     },
     "autoload": {
         "psr-4": {
