--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         "composer/installers": "~1.0",
         "doctrine/inflector": "1.1.*",
         "vlucas/phpdotenv": "^2.0.1",
-        "illuminate/support": "5.6.*",
-        "illuminate/container": "5.6.*",
-        "illuminate/view": "5.6.*",
-        "illuminate/config": "5.6.*",
-        "illuminate/http": "5.6.*",
+        "illuminate/support": "^6.18",
+        "illuminate/container": "^6.18",
+        "illuminate/view": "^6.18",
+        "illuminate/config": "^6.18",
+        "illuminate/http": "^6.18",
         "symfony/var-dumper": "^4.2",
         "filp/whoops": "~2.1",
         "roots/sage-lib": "~9.0.9",
